--- a/locales/calendar.it.properties
+++ b/locales/calendar.it.properties
@@ -1,10 +1,10 @@
-days-sun=sun
-days-mon=mon
-days-tue=tue
-days-wed=wed
-days-thu=thu
-days-fri=fri
-days-sat=sat
-buttons-next=next
-buttons-previous=previous
+days-sun=dom
+days-mon=lun
+days-tue=mar
+days-wed=mer
+days-thu=gio
+days-fri=ven
+days-sat=sab
+buttons-next=successivo
+buttons-previous=precedente
 
