Fixing typos in calendar french locale

--- a/locales/calendar.fr.properties
+++ b/locales/calendar.fr.properties
@@ -6,7 +6,7 @@ days-thu=jeu
 days-fri=ven
 days-sat=sam
 
-back=Retur
+back=Retour
 save=Enregistrer
 hide=Cacher
 cancel=Annuler
@@ -20,7 +20,7 @@ new-event=Ajouter un évènement
 add-event-header=Évènement
 
 account-header=Compte
-account-list-header=comptes
+account-list-header=Comptes
 settings-header=Calendriers
 advanced-settings=Paramètres du calentier
 advanced-settings-header=Paramètres du calentier
