updated German translation

--- a/locales/calendar.de.properties
+++ b/locales/calendar.de.properties
@@ -5,7 +5,32 @@ days-wed=Mi
 days-thu=Do
 days-fri=Fr
 days-sat=Sa
-# XXX not sure if right gender here
-buttons-next=nächster
-buttons-previous=vorheriger
 
+back=Zurück
+save=Speichern
+hide=Verstecken
+cancel=Abbrechen
+done=Fertig
+
+settings-show=Einstellungen
+settings-hide=Einstellungen verstecken
+
+add-account=Account hinzufügen
+new-event=Termin hinzufügen
+add-event-header=Termin
+
+account-header=Account
+account-list-header=Accounts
+settings-header=Kalender
+advanced-settings=Kalender-Einstellungen
+advanced-settings-header=Kalender-Einstellungen
+
+field-user.placeholder=Benutzername:
+field-password.placeholder=Passwort:
+field-fullUrl.placeholder=URL:
+
+preset-caldav=CalDav
+preset-yahoo=Yahoo!
+preset-google=Google
+preset-local=Offline-Kalender
+calendar-local=Offline-Kalender
