--- a/locales/calendar.fr.properties
+++ b/locales/calendar.fr.properties
@@ -23,7 +23,7 @@ account-header=Compte
 account-list-header=Comptes
 settings-header=Calendriers
 advanced-settings=Paramètres du calentier
-advanced-settings-header=Paramètres du calentier
+advanced-settings-header=Paramètres du calendrier
 
 field-user.placeholder=Utilisateur :
 field-password.placeholder=Mot de passe :
