and yet another tiny typo fix

--- a/locales/calendar.fr.properties
+++ b/locales/calendar.fr.properties
@@ -22,7 +22,7 @@ add-event-header=Évènement
 account-header=Compte
 account-list-header=Comptes
 settings-header=Calendriers
-advanced-settings=Paramètres du calentier
+advanced-settings=Paramètres du calendrier
 advanced-settings-header=Paramètres du calendrier
 
 field-user.placeholder=Utilisateur :
