normalize Calendar locales

--- a/locales/calendar.de.properties
+++ b/locales/calendar.de.properties
@@ -1,11 +1,3 @@
-days-sun=So
-days-mon=Mo
-days-tue=Di
-days-wed=Mi
-days-thu=Do
-days-fri=Fr
-days-sat=Sa
-
 back=Zurück
 save=Speichern
 hide=Verstecken
@@ -34,3 +26,13 @@ preset-yahoo=Yahoo!
 preset-google=Google
 preset-local=Offline-Kalender
 calendar-local=Offline-Kalender
+
+#event-title.placeholder=Title
+#event-location.placeholder=Where?
+#event-description.placeholder=Notes:
+
+#event-start-date.placeholder=Start Date
+#event-end-date.placeholder=End Date
+#event-start-time.placeholder=Start Time
+#event-end-time.placeholder=End Time
+
