--- a/locales/calendar.fr.properties
+++ b/locales/calendar.fr.properties
@@ -1,11 +1,3 @@
-days-sun=dim
-days-mon=lun
-days-tue=mar
-days-wed=mer
-days-thu=jeu
-days-fri=ven
-days-sat=sam
-
 back=Retour
 save=Enregistrer
 hide=Cacher
@@ -34,4 +26,13 @@ preset-yahoo=Yahoo!
 preset-google=Google
 preset-local=Calendrier préconfiguré
 calendar-local=Calendrier hors-ligne
+
+event-title.placeholder=Titre
+event-location.placeholder=Où ?
+event-description.placeholder=Notes:
+
+event-start-date.placeholder=Date de début
+event-end-date.placeholder=Date de fin
+event-start-time.placeholder=Heure de début
+event-end-time.placeholder=Heure de fin
 
