Fixed little typo

--- a/locales/calendar.it.properties
+++ b/locales/calendar.it.properties
@@ -28,7 +28,7 @@ preset-local=Calendario Offline
 calendar-local=Calendario Offline
 
 event-title.placeholder=Titolo
-event-location.placeholder=dove?
+event-location.placeholder=Dove?
 event-description.placeholder=Note:
 
 event-start-date.placeholder=Data Inizio
