remove colon signs in placeholders

--- a/locales/calendar.de.properties
+++ b/locales/calendar.de.properties
@@ -17,9 +17,9 @@ settings-header=Kalender
 advanced-settings=Kalender-Einstellungen
 advanced-settings-header=Kalender-Einstellungen
 
-field-user.placeholder=Benutzername:
-field-password.placeholder=Passwort:
-field-fullUrl.placeholder=URL:
+field-user.placeholder=Benutzername
+field-password.placeholder=Passwort
+field-fullUrl.placeholder=URL
 
 preset-caldav=CalDav
 preset-yahoo=Yahoo!
@@ -29,7 +29,7 @@ calendar-local=Offline-Kalender
 
 #event-title.placeholder=Title
 #event-location.placeholder=Where?
-#event-description.placeholder=Notes:
+#event-description.placeholder=Notes
 
 #event-start-date.placeholder=Start Date
 #event-end-date.placeholder=End Date
