--- a/locales/calendar.fr.properties
+++ b/locales/calendar.fr.properties
@@ -17,9 +17,9 @@ settings-header=Calendriers
 advanced-settings=Paramètres du calendrier
 advanced-settings-header=Paramètres du calendrier
 
-field-user.placeholder=Utilisateur :
-field-password.placeholder=Mot de passe :
-field-fullUrl.placeholder=Adresse URL :
+field-user.placeholder=Utilisateur
+field-password.placeholder=Mot de passe
+field-fullUrl.placeholder=Adresse URL
 
 preset-caldav=CalDav
 preset-yahoo=Yahoo!
@@ -29,7 +29,7 @@ calendar-local=Calendrier hors-ligne
 
 event-title.placeholder=Titre
 event-location.placeholder=Où ?
-event-description.placeholder=Notes :
+event-description.placeholder=Notes
 
 event-start-date.placeholder=Date de début
 event-end-date.placeholder=Date de fin
