--- a/locales/calendar.it.properties
+++ b/locales/calendar.it.properties
@@ -29,7 +29,7 @@ calendar-local=Calendario Offline
 
 event-title.placeholder=Titolo
 event-location.placeholder=Dove?
-event-description.placeholder=Note:
+event-description.placeholder=Note
 
 event-start-date.placeholder=Data Inizio
 event-end-date.placeholder=Data Fine
