--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -33,11 +33,11 @@ account-header=Account
 account-list-header=Accounts
 
 # advanced settings
-settings-header=Calendars
-advanced-settings=Calendar settings
+advanced-settings-short=Settings
 advanced-settings-header=Calendar Settings
 advanced-settings-personalization=Personalization
 advanced-settings-reminders=Reminders
+advanced-settings-add-account=Add Account
 
 # create account
 field-user.placeholder=Username
@@ -77,6 +77,11 @@ remove-account-data=Remove local data
 remove-account-dialog=Remove account
 remove-account-dialog-details=Removing this account will also remove your local copy of associated calendars and events.
 
+# sync button in settings drawer
+# This sync button uses an icon for display, so this text is only
+# for accessibility purposes, not visible to the eye.
+drawer-sync-button=Sync
+
 # sync
 
 sync-frequency=Sync Calendar
@@ -89,8 +94,8 @@ sync-frequency-hourly.textContent=Each hour
 
 none=None
 remind-me=Remind me
-from-time=From: 
-to-time=To: 
+from-time=From:
+to-time=To:
 
 alarm-at-event-standard=At time of event
 alarm-at-event-allday=On day of event
