Bug 963394 - Visual refresh for event detail page

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -49,8 +49,8 @@ field-full-url.placeholder=URL
 modify-account-setting-up=Please wait while your account is set up
 modify-account-unable-to-sync=Unable to sync
 modify-account-sign-in=Sign in
-# presets
 
+# presets
 preset-caldav=CalDav
 preset-yahoo=Yahoo!
 preset-google=Google
@@ -62,7 +62,6 @@ preset-mozilla=Mozilla Zimbra
 calendar-local=Offline calendar
 
 # create event
-
 event-title.placeholder=Title
 event-location.placeholder=Where?
 event-description.placeholder=Notes
@@ -75,7 +74,6 @@ event-end-time.placeholder=End time
 event-delete=Delete event
 
 # remove account
-
 remove-account-data=Remove local data
 remove-account-dialog=Remove account
 remove-account-dialog-details=Removing this account will also remove your local copy of associated calendars and events.
@@ -86,25 +84,29 @@ remove-account-dialog-details=Removing this account will also remove your local 
 drawer-sync-button=Sync
 
 # sync
-
 sync-frequency=Sync Calendar
 sync-frequency-manual.textContent=Manually
 sync-frequency-15min.textContent=15 min
 sync-frequency-30min.textContent=30 min
 sync-frequency-hourly.textContent=Each hour
 
+# duration time of events
+# startDate and endDate use the `longDateFormat` format.
+# startTime and endTime use the `shortTimeFormat` format.
+# `<br>` (line break) used for presentation.
+one-day-duration={{startDate}}<br>from {{startTime}} to {{endTime}}
+multiple-day-duration=From {{startTime}} {{startDate}}<br>to {{endTime}} {{endDate}}
+one-all-day-duration=All day<br>{{startDate}}
+multiple-all-day-duration=All day from {{startDate}}<br>to {{endDate}}
+
 # alarms for event view/edit
-
 none=None
+reminder=Reminder:
 remind-me=Remind me
-from-time=From:\u0020
-to-time=To:\u0020
-
 alarm-at-event-standard=At time of event
 alarm-at-event-allday=On day of event
 
 # alarms
-
 alarm-start-notice={{title}} starting {{distance}}
 alarm-started-notice={{title}} started {{distance}}
 
@@ -221,6 +223,9 @@ day-view-header-format=%b %e, %A
 
 # Header used on month view before the event list (selected day date)
 months-day-view-header-format=%A, %b %e
+
+# Date format in the event detail view.
+longDateFormat=%A, %B %d, %Y
 
 #errors
 error-start-after-end=End date must come after start date
