Bug 951069 - Month view visual refresh

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -8,6 +8,7 @@ done=Done
 events=Events
 edit=Edit
 allday-events=All-day Events
+no-events=No Events
 
 # first time use hints
 hint-swipe-action=Swipe
