Bug 1007546 - Visual refresh for Add/Edit event view

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -24,10 +24,12 @@ show-day-view=Day
 settings-show=Settings
 settings-hide=Hide settings
 
-# add records
+# view/add/edit records
 add-account=Add an account
 new-event=Add event
-add-event-header=Event
+view-event-header=Event
+new-event-header=Add Event
+edit-event-header=Edit Event
 
 # account
 account-header=Account
