Bug 971923 - [Calendar] display current time on day and week views

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -211,6 +211,7 @@ hour-format=%I %p
 hour-format-abbr-am=%IA
 hour-format-abbr-pm=%IP
 hour-allday=All Day
+current-time=%I:%M
 
 # Default header used in month view / week view
 multi-month-view-header-format=%b %Y
