--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -251,3 +251,21 @@ weekday-4-single-char = T
 weekday-5-single-char = F
 weekday-6-single-char = S
 
+# The following strings are spoken by screen readers and not shown on the
+# screen.
+weekday-5-single-char.ariaLabel = Friday
+weekday-4-single-char.ariaLabel = Thursday
+weekday-3-single-char.ariaLabel = Wednesday
+weekday-2-single-char.ariaLabel = Tuesday
+weekday-1-single-char.ariaLabel = Monday
+weekday-0-single-char.ariaLabel = Sunday
+weekday-6-single-char.ariaLabel = Saturday
+busy = {[ plural(n) ]}
+busy[one] = {{n}} event
+busy[two] = {{n}} events
+busy[few] = {{n}} events
+busy[many] = {{n}} events
+busy[other] = {{n}} events
+present.ariaLabel = Today
+past-other-month = Other month
+future-other-month = Other month
