Bug 999959 - Double clicking to add an event in day and week views

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -271,3 +271,4 @@ past-other-month = Other month
 future-other-month = Other month
 icon-calendar-alarm.ariaLabel = Has alarm
 calendars.ariaLabel = Calendars
+multi-day-new-event-link.ariaLabel = Add event
