Bug 1069209 - improved accessibility of the month day view event list. r=mmedeiros

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -269,3 +269,4 @@ busy[other] = {{n}} events
 present.ariaLabel = Today
 past-other-month = Other month
 future-other-month = Other month
+icon-calendar-alarm.ariaLabel = Has alarm
