Bug 1084551 - made calendar list accessible in calendar settings. r=mmedeiros

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -270,3 +270,4 @@ present.ariaLabel = Today
 past-other-month = Other month
 future-other-month = Other month
 icon-calendar-alarm.ariaLabel = Has alarm
+calendars.ariaLabel = Calendars
