Bug 1085413 - improved screen reader accessibility of the advanced settings view. r=mmedeiros

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -282,3 +282,4 @@ start-date.ariaLabel = Start date
 start-time.ariaLabel = Start time
 end-date.ariaLabel = End date
 end-time.ariaLabel = End time
+during-progress-loading.ariaValueText = Loading
