Bug 1069216 - improved screen reader accessibility of the event view. r=mmedeiros

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -272,3 +272,9 @@ future-other-month = Other month
 icon-calendar-alarm.ariaLabel = Has alarm
 calendars.ariaLabel = Calendars
 multi-day-new-event-link.ariaLabel = Add event
+title.ariaLabel = Title
+location.ariaLabel = Location
+duration.ariaLabel = Duration
+calendar.ariaLabel = Calendar
+alarms.ariaLabel = Alarms
+description.ariaLabel = Description
