Bug 1069202 - improved screen reader accessibility of the add / modify event view. r=mmedeiros

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -278,3 +278,7 @@ duration.ariaLabel = Duration
 calendar.ariaLabel = Calendar
 alarms.ariaLabel = Alarms
 description.ariaLabel = Description
+start-date.ariaLabel = Start date
+start-time.ariaLabel = Start time
+end-date.ariaLabel = End date
+end-time.ariaLabel = End time
