--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -279,3 +279,9 @@ start-time.ariaLabel = Start time
 end-date.ariaLabel = End date
 end-time.ariaLabel = End time
 during-progress-loading.ariaValueText = Loading
+all-day.ariaLabel = All day
+create-event.ariaLabel = Create event
+create-all-day-event.ariaLabel = Create all day event
+event-one-day-duration.ariaLabel=from {{startTime}} to {{endTime}}
+week-event-one-day-duration.ariaLabel={{startDate}} from {{startTime}} to {{endTime}}
+event-multiple-day-duration.ariaLabel=From {{startTime}} {{startDate}}<br>to {{endTime}} {{endDate}}
