Bug 1108684 - removed <br> from event-multiple-day-duration aria-label

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -284,4 +284,4 @@ create-event.ariaLabel = Create event
 create-all-day-event.ariaLabel = Create all day event
 event-one-day-duration.ariaLabel=from {{startTime}} to {{endTime}}
 week-event-one-day-duration.ariaLabel={{startDate}} from {{startTime}} to {{endTime}}
-event-multiple-day-duration.ariaLabel=From {{startTime}} {{startDate}}<br>to {{endTime}} {{endDate}}
+event-multiple-day-duration.ariaLabel=From {{startTime}} {{startDate}} to {{endTime}} {{endDate}}
