CORE-1980: Implement visual design of advanced settings page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -41,16 +41,18 @@ edit-event-header=Edit Event
 
 # account
 account-header=Account
-account-list-header=Accounts
+account-list-header=ACCOUNT
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
 # screen.
 advanced-settings-short-icon-button.ariaLabel=Settings
-advanced-settings-header=Calendar Settings
-advanced-settings-personalization=Personalization
+advanced-settings-header=Settings
+advanced-settings-personalization=PERSONALIZTION
 advanced-settings-reminders=Reminders
+advanced-settings-alert=ALERT
 advanced-settings-add-account=Add Account
+advanced-settings-setup-calendars=Steup Calendars
 
 # create account
 field-user.placeholder=Username
@@ -101,9 +103,14 @@ sync-progress-complete.ariaValueText=Syncing complete
 
 # sync
 sync-frequency=Sync Calendar
-sync-frequency-15min=15 min
-sync-frequency-30min=30 min
+sync-frequency-15min=Every 15 minutes
+sync-frequency-30min=Every 30 minutes
 sync-frequency-manual=Manually
+
+# default Calendar
+default-calendar=Default Calendar
+default-calendar-offline-work=Offline calendar - Work
+default-calendar-offline-home=Offline calendar - Home
 
 # duration time of events
 # startDate and endDate use the `longDateFormat` format.
