CORE-1494: Add softkey in monthly view. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -17,6 +17,11 @@ month-view-go-to-date=Go To Date
 month-view-calendars-to-display=Calendars to Display
 month-view-settings=Settings
 
+# soft keys for monthly view
+add-event=Add Event
+view=View
+option=Option
+
 # time view selector
 show-today=Today
 show-month-view=Month
