CORE-2015: Add H5OptionMenu for Monthly View. r=jianmin-zhou, arthur

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -11,6 +11,12 @@ edit=Edit
 allday-events=All-day Events
 no-events=No Events
 
+# month view
+month-view-current-date=Current Date
+month-view-go-to-date=Go To Date
+month-view-calendars-to-display=Calendars to Display
+month-view-settings=Settings
+
 # time view selector
 show-today=Today
 show-month-view=Month
