CORE-1977: Add an observer in monthly view to observe 'sync frequency'. r=jianmin
    If the frequency is set to null, then the option menu in monthly
    view would display a item that let user to sync calendar manually.

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -16,6 +16,7 @@ month-view-current-date=Current Date
 month-view-go-to-date=Go To Date
 month-view-calendars-to-display=Calendars to Display
 month-view-settings=Settings
+month-view-sync-calendar=Sync Calendar
 
 # soft keys for monthly view
 add-event=Add Event
