CORE-2168: Add a new page for event list. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -44,6 +44,9 @@ edit-event-header=Edit Event
 account-header=Account
 account-list-header=ACCOUNT
 
+# event list view
+event-list-header=Event List
+
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
 # screen.
