CORE-2181: Implement UX and visual for event list page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -270,6 +270,9 @@ day-view-header-format=%b %e, %A
 # Header used on month view before the event list (selected day date)
 months-day-view-header-format=%A, %b %e
 
+# Date format in the event list view.
+events-list-header-format=%a, %b %e, %Y
+
 # Date format in the event detail view.
 longDateFormat=%A, %B %d, %Y
 
