CORE-1964: Visual UX implement for Add event. r=Jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -10,6 +10,7 @@ events=Events
 edit=Edit
 allday-events=All-day Events
 no-events=No Events
+calendar=Calendar
 
 # month view
 month-view-current-date=Current Date
@@ -84,6 +85,9 @@ calendar-local=Offline calendar
 event-title.placeholder=Title
 event-location.placeholder=Where?
 event-description.placeholder=Notes
+input-field.placeholder=Input field
+title=Title
+location=Location
 
 event-is-allday=All day event?
 event-start-date.placeholder=Start date
@@ -91,6 +95,14 @@ event-end-date.placeholder=End date
 event-start-time.placeholder=Start time
 event-end-time.placeholder=End time
 event-delete=Delete event
+start-date=Start date
+start-time=Start time
+end-date=End date
+end-time=End time
+
+repeat=Repeat
+note=Note
+alert=Alert
 
 # remove account
 remove-account-data=Remove local data
