--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -47,6 +47,9 @@ account-list-header=ACCOUNT
 # event list view
 event-list-header=Event List
 
+# event detail view
+event-detail-header=Event Detail
+
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
 # screen.
