CORE-2158: Add setup calendar page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -51,6 +51,9 @@ event-list-header=Event List
 # event detail view
 event-detail-header=Event Detail
 
+# setup calendar view
+setup-calendar-header=Setup Calendar
+
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
 # screen.
