CORE-2198: Add option menu for event list page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -8,6 +8,7 @@ confirm=Confirm
 done=Done
 events=Events
 edit=Edit
+delete=Delete
 allday-events=All-day Events
 no-events=No Events
 calendar=Calendar
