CORE-2210: The Settings UI is not displayed as UX spec defines. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -9,9 +9,10 @@ done=Done
 events=Events
 edit=Edit
 delete=Delete
-allday-events=All-day Events
+allday-events=All-day Events Alert
 no-events=No Events
 calendar=Calendar
+events-alert=Events Alert
 
 # month view
 month-view-current-date=Current Date
@@ -64,7 +65,7 @@ advanced-settings-personalization=PERSONALIZTION
 advanced-settings-reminders=Reminders
 advanced-settings-alert=ALERT
 advanced-settings-add-account=Add Account
-advanced-settings-setup-calendars=Steup Calendars
+advanced-settings-setup-calendars=Setup Calendars
 
 # create account
 field-user.placeholder=Username
@@ -125,7 +126,7 @@ sync-progress-syncing.ariaValueText=Syncing
 sync-progress-complete.ariaValueText=Syncing complete
 
 # sync
-sync-frequency=Sync Calendar
+sync-frequency=Sync Calendars
 sync-frequency-15min=Every 15 minutes
 sync-frequency-30min=Every 30 minutes
 sync-frequency-manual=Manually
