CORE-2306: Implement delete function in event list page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -49,6 +49,7 @@ account-list-header=ACCOUNT
 
 # event list view
 event-list-header=Event List
+delete-event-confirmation=Delete this event?
 
 # event detail view
 event-detail-header=Event Detail
