CORE-2266: li padding was removed in modify event page. r=jianmin
li padding was removed.

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -13,6 +13,8 @@ allday-events=All-day Events Alert
 no-events=No Events
 calendar=Calendar
 events-alert=Events Alert
+ok=Ok
+clear=Clear
 
 # month view
 month-view-current-date=Current Date
@@ -109,6 +111,13 @@ end-time=End time
 repeat=Repeat
 note=Note
 alert=Alert
+
+never=Never
+every-day=Every day
+every-week=Every week
+every-2-weeks=Every 2 weeks
+every-month=Every month
+every-year=Every year
 
 # remove account
 remove-account-data=Remove local data
