CORE-2183: Implement UX and visual for event detail page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -55,6 +55,7 @@ delete-event-confirmation=Delete this event?
 
 # event detail view
 event-detail-header=Event Detail
+description=Description
 
 # setup calendar view
 setup-calendar-header=Setup Calendar
@@ -154,6 +155,10 @@ one-day-duration={{startDate}}<br>from {{startTime}} to {{endTime}}
 multiple-day-duration=From {{startTime}} {{startDate}}<br>to {{endTime}} {{endDate}}
 one-all-day-duration=All day<br>{{startDate}}
 multiple-all-day-duration=All day from {{startDate}}<br>to {{endDate}}
+one-day-duration-event-detail={{startDate}}<br>{{startTime}} - {{endTime}}
+multiple-day-duration-event-detail={{startTime}} {{startDate}} - {{endTime}} {{endDate}}
+one-all-day-duration-event-detail=All day<br>{{startDate}}
+multiple-all-day-duration-event-detail=All day {{startDate}} - {{endDate}}
 
 # alarms for event view/edit
 none=None
@@ -287,6 +292,7 @@ events-list-header-format=%a, %b %e, %Y
 
 # Date format in the event detail view.
 longDateFormat=%A, %B %d, %Y
+events-detail-duration-format=%a, %b %e, %Y
 
 #errors
 error-start-date-after-end-date=The event cannot end before its start date
