CORE-2207: Spell of 'Option' in softkeys has been corrected. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -26,7 +26,7 @@ month-view-sync-calendar=Sync Calendar
 # soft keys for monthly view
 add-event=Add Event
 view=View
-option=Option
+option=Options
 
 # time view selector
 show-today=Today
