CORE-2356: Date format in add event page fixed. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -290,6 +290,9 @@ months-day-view-header-format=%A, %b %e
 # Date format in the event list view.
 events-list-header-format=%a, %b %e, %Y
 
+# Date format in the modify event view.
+modify-event-time-format=%a, %B %e, %Y
+
 # Date format in the event detail view.
 longDateFormat=%A, %B %d, %Y
 events-detail-duration-format=%a, %b %e, %Y
