CORE-2162:Support add online account.r?jianmin-zhou,Manson

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -59,6 +59,10 @@ description=Description
 
 # setup calendar view
 setup-calendar-header=Setup Calendar
+home=Home
+setup-add-new=Add New
+calendar-online=Online Calendar
+setup-add-account=Add Account
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
@@ -72,6 +76,9 @@ advanced-settings-add-account=Add Account
 advanced-settings-setup-calendars=Setup Calendars
 
 # create account
+field-user=Username
+field-password=Password
+field-full-url=URL
 field-user.placeholder=Username
 field-password.placeholder=Password
 field-full-url.placeholder=URL
