CORE-2376: Time format and paddings in event-list page adjusted. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -159,6 +159,8 @@ one-day-duration-event-detail={{startDate}}<br>{{startTime}} - {{endTime}}
 multiple-day-duration-event-detail={{startTime}} {{startDate}} - {{endTime}} {{endDate}}
 one-all-day-duration-event-detail=All day<br>{{startDate}}
 multiple-all-day-duration-event-detail=All day {{startDate}} - {{endDate}}
+shortTimeFormatTo12 = %I:%M %p
+shortTimeFormatTo24 = %H:%M-
 
 # alarms for event view/edit
 none=None
