CORE-2385: Event detail page UI adjusted. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -155,7 +155,7 @@ one-day-duration={{startDate}}<br>from {{startTime}} to {{endTime}}
 multiple-day-duration=From {{startTime}} {{startDate}}<br>to {{endTime}} {{endDate}}
 one-all-day-duration=All day<br>{{startDate}}
 multiple-all-day-duration=All day from {{startDate}}<br>to {{endDate}}
-one-day-duration-event-detail={{startDate}}<br>{{startTime}} - {{endTime}}
+one-day-duration-event-detail-to={{startDate}}<br>{{startTime}} <span>-</span> {{endTime}}
 multiple-day-duration-event-detail={{startTime}} {{startDate}} - {{endTime}} {{endDate}}
 one-all-day-duration-event-detail=All day<br>{{startDate}}
 multiple-all-day-duration-event-detail=All day {{startDate}} - {{endDate}}
