CORE-2573:Calendar Online account delete event Invalid. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -9,6 +9,7 @@ done=Done
 events=Events
 edit=Edit
 delete=Delete
+remove=Remove
 allday-events=All-day Events Alert
 no-events=No Events
 calendar=Calendar
