CORE-2159: implement the function of add offline calendar. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -64,6 +64,7 @@ home=Home
 setup-add-new=Add New
 calendar-online=Online Calendar
 setup-add-account=Add Account
+new-calendar=New Calendar
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
