CORE-2542: implement the function of rename and delete offline calendar. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -16,6 +16,7 @@ calendar=Calendar
 events-alert=Events Alert
 ok=Ok
 clear=Clear
+rename=Rename
 
 # month view
 month-view-current-date=Current Date
@@ -65,6 +66,8 @@ setup-add-new=Add New
 calendar-online=Online Calendar
 setup-add-account=Add Account
 new-calendar=New Calendar
+rename-calendar=Rename Calendar
+delete-calendar=Are you sure you want to delete the calendar 
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
