CORE-2633: Setup calendar UI fixed. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -60,7 +60,7 @@ event-detail-header=Event Detail
 description=Description
 
 # setup calendar view
-setup-calendar-header=Setup Calendar
+setup-calendar-header=Setup Calendars
 home=Home
 setup-add-new=Add New
 calendar-online=Online Calendar
