CORE-2628: Remove-online-account function invoked position changed, showNotice function added. r=Jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -324,6 +324,9 @@ error-account-exist=This account already exists.
 notification-error-sync-title=Calendar sync error
 notification-error-sync-description=Tap for more info
 
+#notices
+notice-remove-account=Account removed successfully.
+
 # Used in month view as column header, each single char represents a week day
 # (from 0-Sunday to 6-Saturday)
 weekday-0-single-char = S
