CORE-2385: Gaia-icon deleted, time-format changed, word replaced, page rearranged. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -67,7 +67,7 @@ calendar-online=Online Calendar
 setup-add-account=Add Account
 new-calendar=New Calendar
 rename-calendar=Rename Calendar
-delete-calendar=Are you sure you want to delete the calendar 
+delete-calendar=Are you sure you want to delete the calendar
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
@@ -309,7 +309,7 @@ modify-event-time-format=%a, %B %e, %Y
 
 # Date format in the event detail view.
 longDateFormat=%A, %B %d, %Y
-events-detail-duration-format=%a, %b %e, %Y
+events-detail-duration-format=%a, %B %e, %Y
 
 #errors
 error-start-date-after-end-date=The event cannot end before its start date
