--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -11,7 +11,7 @@ edit=Edit
 delete=Delete
 remove=Remove
 allday-events=All-day Events Alert
-no-events=No Events
+no-events=No event
 calendar=Calendar
 events-alert=Events Alert
 ok=Ok
@@ -287,7 +287,7 @@ hour-format12=%I %p
 hour-format24=%H
 week-hour-format12=%I %p
 week-hour-format24=%H
-hour-allday=All Day
+hour-allday=All-day
 week-day=%a %e
 current-time12=%I:%M
 current-time24=%H:%M
@@ -299,7 +299,7 @@ multi-month-view-header-format=%b %Y
 day-view-header-format=%b %e, %A
 
 # Header used on month view before the event list (selected day date)
-months-day-view-header-format=%A, %b %e
+months-day-view-header-format=%a, %B %e
 
 # Date format in the event list view.
 events-list-header-format=%a, %b %e, %Y
