CORE-2644:add invitation from and invitees in online event. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -125,6 +125,8 @@ end-time=End time
 repeat=Repeat
 note=Note
 alert=Alert
+invitation-from=Invitation from
+invitees=Invitees
 
 never=Never
 every-day=Every day
