CORE-2325: show toast after add event succeccful. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -329,6 +329,9 @@ notification-error-sync-description=Tap for more info
 #notices
 notice-remove-account=Account removed successfully.
 
+#toast
+toast-event-add-success=Event added successfully.
+
 # Used in month view as column header, each single char represents a week day
 # (from 0-Sunday to 6-Saturday)
 weekday-0-single-char = S
