CORE-2869: Support deleting recurring event. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -60,6 +60,10 @@ delete-event-confirmation=Delete this event?
 event-detail-header=Event Detail
 description=Description
 
+repeat-event-header=This is a repeating event.
+delete-this-only=Delete this only
+delete-all=Delete all
+
 # setup calendar view
 setup-calendar-header=Setup Calendars
 home=Home
