CORE-2871: To support edit recurring events. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -63,6 +63,8 @@ description=Description
 repeat-event-header=This is a repeating event.
 delete-this-only=Delete this only
 delete-all=Delete all
+edit-this-only=Edit this only
+edit-all=Edit all
 
 # setup calendar view
 setup-calendar-header=Setup Calendars
