CORE-2927: Add repeating information in event detail page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -58,6 +58,7 @@ delete-event-confirmation=Delete this event?
 
 # event detail view
 event-detail-header=Event Detail
+event-detail-repeat=<br><span>{{repeat}}</span>
 description=Description
 
 repeat-event-header=This is a repeating event.
