--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -105,6 +105,9 @@ preset-yahoo=Yahoo!
 preset-google=Google
 preset-local=Offline calendar
 
+#account detail
+account-detail-header={{preset}} Account
+
 # note this does not need to be localized
 # it is highly unlikely we will ship with this value.
 preset-mozilla=Mozilla Zimbra
