--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -51,6 +51,7 @@ edit-event-header=Edit Event
 # account
 account-header=Account
 account-list-header=ACCOUNT
+account-calendar-format={{account}}-{{calendar}}
 
 # event list view
 event-list-header=Event List
