CORE-2927: Flag an online is repeating or not. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -63,6 +63,7 @@ event-detail-repeat=<br><span>{{repeat}}</span>
 description=Description
 
 repeat-event-header=This is a repeating event.
+repeating-event=repeating event
 delete-this-only=Delete this only
 delete-all=Delete all
 edit-this-only=Edit this only
