CORE-2621: use dialogController to manager dialog in page setup calendar. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -77,7 +77,7 @@ calendar-online=Online Calendar
 setup-add-account=Add Account
 new-calendar=New Calendar
 rename-calendar=Rename Calendar
-delete-calendar=Are you sure you want to delete the calendar
+confirm-delete-calendar=Are you sure you want to delete the calendar {{name}} ?
 
 # advanced settings
 # The following string is spoken by screen readers and not shown on the
