CORE-2212: set the style of defaultCalendar selector as UX defines. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -170,6 +170,7 @@ sync-frequency-manual=Manually
 
 # default Calendar
 default-calendar=Default Calendar
+choose-default-calendar=Choose Default Calendar
 default-calendar-offline-work=Offline calendar - Work
 default-calendar-offline-home=Offline calendar - Home
 
