CORE-3052: check whether the name exist before save calendar. r=jianmin-zhou

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -341,6 +341,7 @@ notification-error-sync-description=Tap for more info
 
 #notices
 notice-remove-account=Account removed successfully.
+notice-name-already-exist=The name already exists, please enter a different name.
 
 #toast
 toast-event-add-success=Event added successfully.
