--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -25,6 +25,7 @@ month-view-go-to-date=Go To Date
 month-view-calendars-to-display=Calendars to Display
 month-view-settings=Settings
 month-view-sync-calendar=Sync Calendar
+calendar-syncing=Calendar Syncing...
 
 # soft keys for monthly view
 add-event=Add Event
