CORE-3214: Popup a message while canceling synchronization. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -162,6 +162,7 @@ drawer-sync-icon-button.ariaLabel=Sync
 # screen.
 sync-progress-syncing.ariaValueText=Syncing
 sync-progress-complete.ariaValueText=Syncing complete
+sync-canceled=Synchronization has been cancelled
 
 # sync
 sync-frequency=Sync Calendars
