CORE-3030: Display fully information of a calendar for save. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -75,6 +75,7 @@ setup-calendar-header=Setup Calendars
 home=Home
 setup-add-new=Add New
 calendar-online=Online Calendar
+calendar-offline=Offline Calendar
 setup-add-account=Add Account
 new-calendar=New Calendar
 rename-calendar=Rename Calendar
