CORE-3353: Change time format and enlarge the length of h5 in agenda to display long title. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -317,17 +317,17 @@ multi-month-view-header-format=%b %Y
 day-view-header-format=%b %e, %A
 
 # Header used on month view before the event list (selected day date)
-months-day-view-header-format=%a, %B %e
+months-day-view-header-format=%a. %B %e
 
 # Date format in the event list view.
 events-list-header-format=%a, %b %e, %Y
 
 # Date format in the modify event view.
-modify-event-time-format=%a, %B %e, %Y
+modify-event-time-format=%a. %B %e, %Y
 
 # Date format in the event detail view.
-longDateFormat=%A, %B %d, %Y
-events-detail-duration-format=%a, %B %e, %Y
+longDateFormat=%A. %B %d, %Y
+events-detail-duration-format=%a. %B %e, %Y
 
 #errors
 error-start-date-after-end-date=The event cannot end before its start date
