CORE-3600: Modified repeating information displayed in event-detail page. r=jianmin

--- a/locales/calendar.en-US.properties
+++ b/locales/calendar.en-US.properties
@@ -148,6 +148,12 @@ every-2-weeks=Every 2 weeks
 every-month=Every month
 every-year=Every year
 
+every-day-event-detail=repeats daily
+every-week-event-detail=repeats weekly
+every-2-weeks-event-detail=repeats every 2 weeks
+every-month-event-detail=repeats monthly
+every-year-event-detail=repeats yearly
+
 # remove account
 remove-account-data=Remove local data
 remove-account-dialog=Remove account
